# virtual_synthesizer

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  makefile  output.txt
.github/workflows/: check-and-lint.yml
resources/basic/: A#.flac  A.flac  B.flac  C#.flac  C.flac  D#.flac  D.flac  E.flac  F#.flac  F.flac  G#.flac  G.flac
resources/bell/: A#.flac  A#2.flac  A.flac  A2.flac  B.flac  B2.flac  C#.flac  C#2.flac  C.flac  C2.flac  D#.flac  D#2.flac  D.flac  D2.flac  E.flac  E2.flac  F#.flac  F#2.flac  F.flac  F2.flac  G#.flac  G#2.flac  G.flac  G2.flac
resources/lancer/: A#.flac  A#2.flac  A.flac  A2.flac  B.flac  B2.flac  C#.flac  C#2.flac  C.flac  C2.flac  D#.flac  D#2.flac  D.flac  D2.flac  E.flac  E2.flac  F#.flac  F#2.flac  F.flac  F2.flac  G#.flac  G#2.flac  G.flac  G2.flac
resources/organ/: A#.flac  A#2.flac  A.flac  A2.flac  B.flac  B2.flac  C#.flac  C#2.flac  C.flac  C2.flac  D#.flac  D#2.flac  D.flac  D2.flac  E.flac  E2.flac  F#.flac  F#2.flac  F.flac  F2.flac  G#.flac  G#2.flac  G.flac  G2.flac
resources/sawtooth/: A#.flac  A#2.flac  A.flac  A2.flac  B.flac  B2.flac  C#.flac  C#2.flac  C.flac  C2.flac  D#.flac  D#2.flac  D.flac  D2.flac  E.flac  E2.flac  F#.flac  F#2.flac  F.flac  F2.flac  G#.flac  G#2.flac  G.flac  G2.flac
resources/sine/: A#.flac  A#2.flac  A.flac  A2.flac  B.flac  B2.flac  C#.flac  C#2.flac  C.flac  C2.flac  D#.flac  D#2.flac  D.flac  D2.flac  E.flac  E2.flac  F#.flac  F#2.flac  F.flac  F2.flac  G#.flac  G#2.flac  G.flac  G2.flac
resources/square/: A#.flac  A#2.flac  A.flac  A2.flac  (+20 more)
src/: collection.rs  main.rs  mod.rs
(+57 files in other folders)
